--- a/SheepShaver/src/MacOSX/.gitignore
+++ b/SheepShaver/src/MacOSX/.gitignore
@@ -4,4 +4,6 @@ SheepShaver.xcodeproj/*.mode1v3
 SheepShaver.xcodeproj/*.pbxuser
 
 # autoconf build generated Info.plist file
-Info.plist
+# Specify *this directory* for ignoring the build-generated Info.plist.
+# This was clobbering all Info.plists downstairs, which are needed for iOS.
+./Info.plist
