add importing of disks from filesystem

--- a/SheepShaver/src/MacOSX/SheepShaveriOS/Info.plist
+++ b/SheepShaver/src/MacOSX/SheepShaveriOS/Info.plist
@@ -8,11 +8,43 @@
 	<array>
 		<dict>
 			<key>CFBundleTypeName</key>
-			<string>Disk</string>
+			<string>Disk Image</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>LSHandlerRank</key>
 			<string>Default</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>public.disk-image</string>
+				<string>com.apple.disk-image-dmg</string>
+				<string>public.iso-image</string>
+			</array>
 		</dict>
-		<dict/>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>DSK Disk Image</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>dsk</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>CD/DVD Image</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>cdr</string>
+				<string>img</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
